fix for felix urlstreamfactoryhandlerproxy not supporting default schemes (e.g. http, https, ftp, file)